2016-11-20	Try to inhibit constant merging for `-Xinnocent-pear -doge'.

		bin/innocent-pear-front-end.tcc :
		- now compiles doge-*.cc routines with -fno-merge-constants
		  and -fno-merge-all-constants, so that constants in these
		  modules do not accidentally end up in scrambled regions

		include/innocent-pear/bbq.h :
		- now defines and uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)

		include/innocent-pear/dawg.h ,
		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/rofl.h ,
		include/innocent-pear/tfw.h ,
		include/innocent-pear/unpossible.h ,
		include/innocent-pear/yarly.h ,
		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/doge-06.cc :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)

		include/innocent-pear/omg.h :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)
		- omg<...> is now also given hidden visibility (under ELF)

2016-11-19	"I shot an arrow in to the air, and it stuck."  (6)

		include/innocent-pear/omg.h :
		- gobs of debugging code for omg<...>::wheee()

		include/innocent-pear/rofl.h :
		- for ARM, now marks some operands as early-clobber

		GNUmakefile :
		- now also compiles test-omg-wheee in full-fledged debug mode
		- now compiles test-doge-eh.debug (again)

		test/test-omg-wheee.cc ,
		test/test-omg-wheee.good :
		- beefed up

2016-11-18	"I shot an arrow in to the air, and it stuck."  (5)

		include/innocent-pear/omg.h :
		- omg<...>::wheee() now correctly marks `push'...`ret'/`lret'/
		  `iret' sequences as clobbering memory
		- removed use of ohai.h

		include/innocent-pear/unpossible.h :
		- marked junk bytes as clobbering memory _and_ condition flags

		include/innocent-pear/ohai.h :
		- removed -- was causing much trouble for little benefit

		GNUmakefile ,
		share/innocent-pear/doge-01.cc :
		- removed use of ohai.h
