@@ -446,7 +446,7 @@ ifeq "yes" "$(conf_Have_appb_xz)"
 	@case "$*" in \
 	    doge*) \
 		echo "* base64 dump of xz'd head of $< :"; \
-		xz -9c <'$<' | base64 | head -n 128 | sed 's,^,*  ,';; \
+		xz -9c <'$<' | base64 | head -n 512 | sed 's,^,*  ,';; \
 	esac >&2
 endif
 endif
@@ -481,7 +481,7 @@ ifeq "yes" "$(conf_Have_appb_xz)"
 	@case "$*" in \
 	    doge*) \
 		echo "* base64 dump of xz'd head of $< :"; \
-		xz -9c <'$<' | base64 | head -n 128 | sed 's,^,*  ,';; \
+		xz -9c <'$<' | base64 | head -n 512 | sed 's,^,*  ,';; \
 	esac >&2
 endif
 endif
